--- a/test.html
+++ b/test.html
@@ -11903,7 +11903,7 @@ div#notebook {
     }
 
     var interact = new window.NbInteract({
-      spec: 'fourie/thesis/master',
+      spec: 'aidan-fourie/thesis/master',
       baseUrl: 'https://mybinder.org',
       provider: 'gh',
     })
