--- a/test.html
+++ b/test.html
@@ -12198,7 +12198,7 @@ During handling of the above exception, another exception occurred:
     }
 
     var interact = new window.NbInteract({
-      spec: 'fourie/thesis/master',
+      spec: 'aidan-fourie/thesis/master',
       baseUrl: 'https://mybinder.org',
       provider: 'gh',
     })
