--- a/test.html
+++ b/test.html
@@ -11833,6 +11833,7 @@ div#notebook {
 <span class="kn">from</span> <span class="nn">keras</span> <span class="k">import</span> <span class="n">regularizers</span>
 <span class="kn">from</span> <span class="nn">keras.callbacks</span> <span class="k">import</span> <span class="n">EarlyStopping</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">from</span> <span class="nn">ipywidgets</span> <span class="k">import</span> <span class="n">interact</span><span class="p">,</span><span class="n">interact_manual</span>
 </pre></div>
 
     </div>
@@ -12013,9 +12014,7 @@ div#notebook {
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">ipywidgets</span> <span class="k">import</span> <span class="n">interact</span><span class="p">,</span><span class="n">interact_manual</span>
-
-<span class="k">def</span> <span class="nf">storage</span><span class="p">(</span><span class="n">lay</span><span class="p">,</span><span class="n">act</span><span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">storage</span><span class="p">(</span><span class="n">lay</span><span class="p">,</span><span class="n">act</span><span class="p">):</span>
     <span class="k">global</span> <span class="n">layers</span>
     <span class="k">global</span> <span class="n">activations</span>
     
